concord_macros/tests/dsl/fail/fail_secret_in_timeout_expr.stderr
error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/dsl/fail/fail_secret_in_timeout_expr.rs:12:51
   |
12 |     timeout std::time::Duration::from_secs(secret.token.len() as u64)
   |                                                   ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_in_timeout_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
